3.0.14
	+ Disable TCP offloading for eth0
3.0.11
	+ Do not add /32 mask to default route when deleting routes
3.0.10
	+ Fixed bug which made impossible to edit pppoe gateways
	+ Flush interfaces list cache after all ifups and all ifdowns
3.0.9
	+ Set proper file name for HTTP proxy configuration for APT
	+ Set HTTP proxy wide settings in /etc/environment
	+ Fix setNameservers method in Network to avoid error in import
	  interfaces
3.0.8
	+ Use upstart for ddclient daemon management
3.0.7
	+ Fixed bug which unallowed to disable the proxy server
	+ Corrected typo in message on tab multigw when only one gw is present
3.0.6
	+ PPPoE set iface script is more robust against locks
	+ Adapted to use of ifaceByAddress, removed IPAddressExists
	+ Don't allow to use a local address as gateway address
	+ Added ifaceByAddress method
3.0.5
	+ Guard against previous version of squid without
	  authenticationMode method
3.0.4
	+ Improve addition of localhost as primary resolver when DNS module is
	  enabled.
	+ Remove localhost as primary resolver when squid module is configured
	  to authenticate against external server
3.0.3
	+ Log warn instead of error when iface has not address in _multigwRoutes()
	+ Fixed error replacing nameserver when importing resolv.conf
	+ Remove leftover PPP provider files
	+ Remove attached vlans when a interface is not longer trunk
	+ Do not try to disable rp_filter for vlan interfaces
	+ Virtual interfaces on a bridge interface are not considered
	  bridges themselves
	+ Use EBox::Module::Base::writeConfFile to generate interfaces
	  file
	+ Only disable IPv6 in enableActions if IPv6 is available
	+ Bridged interfaces added to 'auto' directive in
	  /etc/networks/interfaces to avoid network startup problems
	+ Dont allow to set a local address as network proxy
	+ Fixed error in json response trigered by widget size
	+ Don't check for IPaddr in the same subnet on interfaces
	  that belong to the same bridge
3.0.2